<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:background="@color/colorPrimary"
    tools:context=".registro.ActivityReset">


    <ImageView
        android:id="@+id/imagelogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/logo_chemo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/texto_esqueceu_senha"
        android:textColor="@color/colorTexto"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/texto_recuper_senha"
        android:textColor="@color/colorTexto"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/edt_reset_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:drawableLeft="@drawable/img_email"
        android:drawablePadding="10dp"
        android:hint="@string/e_mail"
        android:textColorHint="@color/colorTexto"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/bt_reset"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/formato_botao"
        android:text="@string/reset_senha"
        android:textColor="@color/colorTexto"/>
</LinearLayout>